aside,header,footer 및 링크 태그수정

--- a/Ki4C_Solution/Views/Common/Auth/FindIdInput.cshtml
+++ b/Ki4C_Solution/Views/Common/Auth/FindIdInput.cshtml
@@ -66,8 +66,8 @@
                 <div style="padding-left: 90px; padding-top: 20px;">
                     <a href="#" style="display: inline-block;">
                         <input id="find-button" type="submit" value="아이디 찾기" onclick="FindIdInputJS.submitBtnClick()" />
-                    </a>
-                    <a href="/common/auth/Login.html" style="display: inline-block;">
+                    </a>                    
+                    <a style="display: inline-block;" asp-area="" asp-controller="CommonAuth" asp-action="Login">
                         <input id="cancle-button" type="submit" value="취소" />
                     </a>
                 </div>
