--- a/Ki4C_Solution/Views/Member/Diagnosis/CompanyBasicInformation.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/CompanyBasicInformation.cshtml
@@ -47,7 +47,7 @@
         <div style="text-align: center;"> 
         <!-- <div style="padding-top: 30px; padding-bottom: 30px;">  -->
             <button id="saveButton">저장하기</button> 
-            <button onClick="location.href='/member/diagnosis/SelfDiagnosisQuestion.html'" id="startButton">진단 시작하기</button>       
+            <button onClick="location.href='/MemberDiagnosis/SelfDiagnosisQuestion'" id="startButton">진단 시작하기</button>       
         </div>
     </div>
     <!-- 콘텐츠 -->
