--- a/Ki4C_Solution/Views/Member/Diagnosis/DiagnosisFinished.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/DiagnosisFinished.cshtml
@@ -37,7 +37,7 @@
             </p>
         </div>
         <div class="contents" style="display: flex; justify-content: center;">   
-            <button id="confirmButton" type="button" onClick="location.href='../../../Index.html'">
+            <button id="confirmButton" type="button" onClick="location.href='/Home/Index'">
                 확인
             </button>
         </div>
