--- a/Ki4C_Solution/Views/Member/Diagnosis/ExpertDiagnosis.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/ExpertDiagnosis.cshtml
@@ -23,7 +23,7 @@
             <h2>디지털혁신역량(DIC, Digital Innovation Competency)</h2>
             <h2>전문가 진단(제조업)</h2>
             <div id=diagnosisImg>
-                <img style="width: 280px; height: 230px; " src="../../img/diagnosisImg.png">
+                <img style="width: 280px; height: 230px; " src="~/images/diagnosisImg.png">
             </div>
             <br>
             <div id=data>
