--- a/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosis.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosis.cshtml
@@ -35,7 +35,7 @@
                 <input type="checkbox" />당사는 상기 내용에 따른 정보 수집 및 이용에 동의합니다.
             </div>
             <div style="padding-top: 30px; padding-bottom: 30px;">
-                <button onClick="location.href='/member/diagnosis/CompanyBasicInformation.html'" id="startButton">진단 시작하기</button>
+                <button onclick="location.href='/MemberDiagnosis/CompanyBasicInformation'" id="startButton" type="button" asp-area="" asp-controller="MemberDiagnosis" asp-action="CompanyBasicInformation">진단 시작하기</button>
             </div>
         </div>
     </div>
