--- a/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosisQuestion.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosisQuestion.cshtml
@@ -232,7 +232,7 @@
     function handleLinkClick(event) {
         if (confirm("제출하시겠습니까?") == true) {
             console.log(result);
-            window.location.href = "/member/diagnosis/DiagnosisFinished.html";
+            window.location.href = "/MemberDiagnosis/DiagnosisFinished";
         } else {
             return false;
         }
