--- a/Ki4C_Solution/Views/Shared/_Aside.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside.cshtml
@@ -1,10 +1,12 @@
-﻿<div style="padding: 10px; height: 30px; line-height: 30px; background: white;">
-    ▣ 회사 소개
-</div>
-<div style="height: 300px; background: grey;">
-    <ul style="list-style:none; padding-left:0px;">
-        <li style="padding: 10px 0 0 10px;"><a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="Greetings">◎ 인사말</a></li>
-        <li style="padding: 10px 0 0 10px;"><a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="IntroductionDX">◎ DX 소개</a></li>
-        <li style="padding: 10px 0 0 10px;"><a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="OnTheWay">◎ 찾아오시는 길</a></li>
-    </ul>
-</div>
+﻿<aside>
+    <div style="padding: 10px; height: 30px; line-height: 30px; background: white;">
+        ▣ 회사 소개
+    </div>
+    <div style="height: 300px; background: grey;">
+        <ul style="list-style:none; padding-left:0px;">
+            <li style="padding: 10px 0 0 10px;"><a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="Greetings">◎ 인사말</a></li>
+            <li style="padding: 10px 0 0 10px;"><a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="IntroductionDX">◎ DX 소개</a></li>
+            <li style="padding: 10px 0 0 10px;"><a class="text-primary" asp-area="" asp-controller="CommonCompany" asp-action="OnTheWay">◎ 찾아오시는 길</a></li>
+        </ul>
+    </div>
+</aside>
