--- a/Ki4C_Solution/Views/Shared/_Aside_dg_ev_mgnt.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg_ev_mgnt.cshtml
@@ -17,24 +17,26 @@
         border-radius: 30px;
     }
 </style>
-<div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
-    <div id=profile_img style="display: inline;">
-        <img style="width: 50px; height: 50px; " src="../../img/profile.png">
+<aside>
+    <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
+        <div id=profile_img style="display: inline;">
+            <img style="width: 50px; height: 50px; " src="~/images/profile.png">
+        </div>
+        <div style="display: inline; height: 20px; vertical-align: top; margin-left: 10px;">
+            관리자466
+        </div>
+        <div style="position: relative; left: 60px;">
+            <input id="mypageButton" type="submit" value="마이페이지" />
+            <input id="logoutButton" type="submit" value="로그아웃" />
+        </div>
     </div>
-    <div style="display: inline; height: 20px; vertical-align: top; margin-left: 10px;">
-        관리자466
+    <div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
+        ▣ 진단관리/평가관리시스템
     </div>
-    <div style="position: relative; left: 60px;">
-        <input id="mypageButton" type="submit" value="마이페이지" />
-        <input id="logoutButton" type="submit" value="로그아웃" />
+    <div style="height: 300px; background: grey;">
+        <ul style="list-style:none; padding-left:0px;">
+            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="ManagerDiagnosis" asp-action="DiagnosisMgrList">◎ 진단 관리</a></li>
+            <li style="padding: 10px 0 0 10px;"> <a asp-area="" asp-controller="ManagerDiagnosis" asp-action="DiagnosisEvaluationMgrList">◎ 진단평가 관리</a></li>
+        </ul>
     </div>
-</div>
-<div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
-    ▣ 진단관리/평가관리시스템
-</div>
-<div style="height: 300px; background: grey;">
-    <ul style="list-style:none; padding-left:0px;">
-        <li style="padding: 10px 0 0 10px;"><a href="DiagnosisMgrList.html">◎ 진단 관리</a></li>
-        <li style="padding: 10px 0 0 10px;"><a href="DiagnosisEvaluationMgrList.html">◎ 진단평가 관리</a></li>
-    </ul>
-</div>
+</aside>
