--- a/Ki4C_Solution/Views/Shared/_Aside_my.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_my.cshtml
@@ -64,26 +64,28 @@
         }
     }
 </style>
-<div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
-    <div id=profile_img style="display: inline;">
-        <img style="width: 50px; height: 50px; "src="../../../img/profile.png">
+<aside>
+    <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
+        <div id=profile_img style="display: inline;">
+            <img style="width: 50px; height: 50px; " src="~/images/profile.png">
+        </div>
+        <div style="display: inline-block; vertical-align: top;">
+            홍길동  <br>
+            산업공학과
+        </div>
+        <div style="position: relative; left: 60px;">
+            <input id="mypageButton" type="submit" value="마이페이지"/>
+            <input id="logoutButton" type="submit" value="로그아웃"/>        
+        </div>
     </div>
-    <div style="display: inline-block; vertical-align: top;">
-        홍길동  <br>
-        산업공학과
+    <div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
+        ▣ 마이 페이지
     </div>
-    <div style="position: relative; left: 60px;">
-        <input id="mypageButton" type="submit" value="마이페이지"/>
-        <input id="logoutButton" type="submit" value="로그아웃"/>        
+    <div style="height: 300px; background: lightgrey;">
+        <ul style="list-style:none; padding-left:0px;">
+            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoRead">◎ 내 정보 보기</a></li>
+            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoUpdate">◎ 내 정보 수정</a></li>
+            <li style="padding: 10px 0 0 10px;"><a asp-area="" asp-controller="MemberMypage" asp-action="MyInfoDelete">◎ 탈퇴</a></li>
+        </ul>
     </div>
-</div>
-<div style="margin-top: 10px; padding: 10px; height: 30px; line-height: 30px; background: white;">
-    ▣ 마이 페이지
-</div>
-<div style="height: 300px; background: lightgrey;">
-    <ul style="list-style:none; padding-left:0px;">
-        <li style="padding: 10px 0 0 10px;"><a href="/member/mypage/MyInfoRead.html">◎ 내 정보 보기</a></li>
-        <li style="padding: 10px 0 0 10px;"><a href="/member/mypage/MyInfoUpdate.html">◎ 내 정보 수정</a></li>
-        <li style="padding: 10px 0 0 10px;"><a href="/member/mypage/MyInfoDelete.html">◎ 탈퇴</a></li>
-    </ul>
-</div>
+</aside>
