230224 메인화면 변경

--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -194,19 +194,19 @@
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationQnA">/manager/StandardInforMgr/DiagnosisEvaluationQnA</a>
             </td>
         </tr>
-                <tr>
+        <tr>
             <td>DiagnosisInputType</td>
             <td>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisInputType">/manager/StandardInforMgr/DiagnosisInputType</a>
             </td>
         </tr>
-                <tr>
+        <tr>
             <td>DiagnosisType</td>
             <td>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisType">/manager/StandardInforMgr/DiagnosisType</a>
             </td>
         </tr>
-                <tr>
+        <tr>
             <td>DiagnosticLevel</td>
             <td>
                 <a class="text-dark" asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosticLevel">/manager/StandardInforMgr/DiagnosticLevel</a>
@@ -243,15 +243,16 @@
             </td>
         </tr>
         <tr>
+            <td>SelfDiagnosisQuestion</td>
+            <td>
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="ExpertDiagnosisQuestion">/Member/Diagnosis/ExpertDiagnosisQuestion</a>
+            </td>
+        </tr>
+        <tr>
             <td>DXSelfDiagnosisDetailView</td>
             <td>
                 <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="DXSelfDiagnosisDetailView">/member/mypage/DXSelfDiagnosisDetailView.html</a>
             </td>
         </tr>
-        DXSelfDiagnosisDetailView
     </tbody>
 </table>
-        
-
-
-
