--- a/Ki4C_Solution/Views/Member/Diagnosis/ExpertDiagnosis.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/ExpertDiagnosis.cshtml
@@ -34,7 +34,7 @@
                 <input type="checkbox" />당사는 상기 내용에 따른 정보 수집 및 이용에 동의합니다.
             </div>
             <div style="padding-top: 30px; padding-bottom: 30px;">
-                <button onClick="location.href='/member/diagnosis/ExpertDiagnosisQuestion.html'" id="startButton">진단 시작하기</button>
+                <button onClick="location.href='/MemberDiagnosis/ExpertDiagnosisQuestion'" id="startButton">진단 시작하기</button>
             </div>
         </div>
     </div>
