--- a/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosisQuestion.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosisQuestion.cshtml
@@ -64,6 +64,9 @@
     }
 
     @@media (max-width: 768px){
+        section {
+            width: 90%;
+        }
         #data {
             display: flex;
             flex-direction: column;
@@ -78,7 +81,7 @@
 </style>
 
 <!-- 섹션 -->
-<section style="width: 100%">
+<section>
     <!-- 콘텐츠 -->
     <div id="wrap" style="width: 90%; text-align: center;">
         <div id="contetns" style="text-align: center;">
