--- a/Ki4C_Solution/Views/Home/Index.cshtml
+++ b/Ki4C_Solution/Views/Home/Index.cshtml
@@ -5,135 +5,64 @@
 }
 
 @*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>*@
-<article class="slider">
-    <img src="~/index/images/p-images/section1_bg.png" alt="">
-</article>
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>*@
+
+<!-- 스타일 지정 -->
+<style type="text/css">
+    /* 메인 화면 */
+    #mainImg {
+        width: 100%;
+        height: 100%;
+        vertical-align: middle;
+    }
+    section {
+        float: left;
+        width: 96.6%;
+        height: calc( 100% - 300px );
+        background: black;
+        display: flex;
+    }
+    .contents {
+        width: 100%;
+        margin: 10px auto;
+        position: relative;
+    }
+    .contents-text {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-30%, -50%);
+        color: white;
+    }
+    .contents-text p:first-child {
+        font-size: 40px;
+        font-weight: 800;
+    }
+    #btn1 {
+        width: 250px; height: 60px;
+        background-color: transparent;
+        border: solid 0.3px yellow;
+        color: white;
+        font-size: 24px;
+    }
+</style>
+<!-- 스타일 지정 -->
 <section class="content">
-    <section class="display-section">
-        <div class="container">
-            <h2 class="sec-tit"><a href="#">무료체험</a></h2>
-            <p class="desc">AI 기반 DX진단 Service : 국내 창업기업, 중소기업, 중견기업 대상 DT역량 진단</p>
-        </div>
-    </section>
-    <section class="promotion-section">
-        <div class="container">
-            <ul class="promo-list">
-                <li>
-                    <a href="">
-                        <img src="~/index/images/s-images/promo01.png" alt="">
-                        <h3>조합소개</h3>
-                        <p>케이아이포씨 협동조합, 디지털 트랜스포메이션 진단 및 컨설팅 서비스 제공</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="~/index/images/s-images/promo02.png" alt="">
-                        <h3>WE ARE</h3>
-                        <p>디지털 트랜스포메이션(DT) 역량진단 사업</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="~/index/images/s-images/promo03.png" alt="">
-                        <h3>WORK</h3>
-                        <p>문제를 정확히 진단하고 컨설팅하라</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="~/index/images/s-images/promo04.png" alt="">
-                        <h3>주요사업</h3>
-                        <p>디지털 트랜스포메이션(이하 DT) 역량진단/교육/기술지원•자문•컨설팅/학술연구•정책용역•서비스/각종 특허 및 기술 정보 제공</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <hr class="divider">
-    <section class="work-section cfixed">
-        <h2 class="sec-tit">WORK</h2>
-        <ul class="work-list">
-            <li>
-                <a href="">
-                    <div class="info">
-                        <h3>역량진단 사업</h3>
-                        <span>WEB/PRINT</span>
-                    </div>
-                    <img src="~/index/images/p-images/main_icon1.png" style="width:50%; height:50%" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="info">
-                        <h3>교육사업</h3>
-                        <span>WEB/PRINT</span>
-                    </div>
-                    <img src="~/index/images/p-images/main_icon2.png" style="width:50%; height:50%" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="info">
-                        <h3>기술지원자문 컨설팅 사업</h3>
-                        <span>WEB/PRINT</span>
-                    </div>
-                    <img src="~/index/images/p-images/main_icon3.png" style="width:50%; height:50%" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="info">
-                        <h3>정부기관 정책 용역 사업</h3>
-                        <span>WEB/PRINT</span>
-                    </div>
-                    <img src="~/index/images/p-images/main_icon4.png" style="width:50%; height:50%" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="info">
-                        <h3>특허 기술 정보 제공 사업</h3>
-                        <span>WEB/PRINT</span>
-                    </div>
-                    <img src="~/index/images/p-images/main_icon5.png" style="width:50%; height:50%" alt="">
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <div class="info">
-                        <h3>...</h3>
-                        <span>WEB/PRINT</span>
-                    </div>
-                    <img src="" style="width:50%; height:50%" alt="">
-                </a>
-            </li>
-        </ul>
-    </section>
-    <hr class="m-divider">
-
-    <!-- The Modal -->
-    <div class="modal fade" id="loginSuccessModal" tabindex="-1" role="dialog" aria-labelledby="loginSuccessModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="loginSuccessModalLabel">로그인 성공</h5>
-                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p id="ValidateMessage">@ViewData["ValidateMessage"]</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary closeBtn" data-dismiss="modal">닫기</button>
-                </div>
-            </div>
-        </div>
+    <img id="mainImg" src="~/index/images/p-images/section1_bg.png" alt="">
+    <div class="contents-text">
+        <p>AI 기반 DX 진단 서비스</p>
+        <p>국내 창업기업, 중소기업, 중견기업 대상 DT역량 진단</p>
+        <a asp-area="" asp-controller="MemberDiagnosis" asp-action="SelfDiagnosis">
+            <input id="btn1" type="submit" value="무료 체험" />
+        </a>
+        <p>케이아이포씨(Ki4C) 협동조합 AI 기반 DX진단 Service 전문가가 도와드립니다.</p>
     </div>
+</section>
 
-    <script>
-        let IndexJS = {
+    <script>let IndexJS = {
             init: function () {
                 this.bindEvent();
             },
@@ -173,5 +102,4 @@
 
         $(".btn-close, .closeBtn").click(function () {
             $('#loginSuccessModal').modal('hide');
-        });
-    </script>
+        });</script>
